fix se envian mail a cualquier destinatario

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MAILTRAP_USER="smtp@mailtrap.io"
 MAILTRAP_PASS="c136505fc4ec71eb3fba35617c1c4c7c"
 MAILTRAP_HOST="live.smtp.mailtrap.io"
 MAILTRAP_PORT="587"
+
+GMAIL_USER="ignaciosolerds@gmail.com"
+GMAIL_PASS="lplicbhofksbsopy"
