dev implementacion de cola redis

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MAILTRAP_PORT="587"
 
 GMAIL_USER="ignaciosolerds@gmail.com"
 GMAIL_PASS="lplicbhofksbsopy"
+
+CELERY_BROKER_URL="redis://redis:6379/0"
+CELERY_RESULT_BACKEND="redis://redis:6379/0"
