--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ GMAIL_PASS="lplicbhofksbsopy"
 
 CELERY_BROKER_URL="redis://redis:6379/0"
 CELERY_RESULT_BACKEND="redis://redis:6379/0"
+
+DATABASE_URL="mysql+pymysql://root:password@db/patient_db"
